package com.ssm.strategy;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/6/2 12:20
 */
public interface FlyBehavior {

    void fly(); // 子类具体实现
}
