package com.ssm.strategy;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/6/2 12:22
 */
public interface QuackBehavior {
    void quack();//子类实现
}
